--- a/src/qna.html
+++ b/src/qna.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QnA Clicked Example</title>
+  <title>QnA Clicked Example 22222</title>
   <link rel="stylesheet" href="./output.css">
 </head>
 <body class="bg-gray-100 p-10">
